--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,6 @@ setenv =
 
 commands =
     # NOTE: you can run any command line tool here - not just tests
-    flake8 -j1 --exclude=.ipynb_checkpoints pyrsig
+    flake8 -j1 --exclude=.ipynb_checkpoints cmaq2hemco
     coverage run -m pytest -v cmaq2hemco
     coverage report -im
