more docs and tests

--- a/tox.ini
+++ b/tox.ini
@@ -7,9 +7,11 @@ envlist = py39
 deps =
     boto3
     numpy
+    scipy
     pandas
     xarray
     netcdf4
+    h5netcdf
     pytest
     flake8
     coverage
